# LArPandora.Redmine

./: CMakeLists.txt  GNuMIFlux.xml  cosmics.xml  evgen.xml  genie-granlib.xml  genie.xml
AggregateEvent/: AggEvent.cxx  AggEvent.h  AggTrack.cxx  AggTrack.h  AggVertex.cxx  AggVertex.h  AggregateEvent.cxx  AggregateEvent.h  AggregateVertex.cxx  AggregateVertex.h  AggregateVertexAna.cxx  AggregateVertexAna.h  GNUmakefile  classes.h  classes_def.xml
AnalysisTree/AnalysisTree/: AnalysisTree_module.cc
AnalysisTree/ArgoneutEventDisplay/: evd_argoneut.fcl
AnalysisTree/CCInclusiveMacro/: dataerror.C  energylost.root  run_dataerror.C  simvalid.C
AnalysisTree/CCQEanalysis/: CCQEAnalysisTree.cxx  CCQEanalysis_module.cc  ccqeanalysistreemodule.fcl
AnalysisTree/GridJobSubmission/: myloadlibs.C
AnalysisTree/Kinematics/: GNUmakefile  Kinematics_module.cc
AnalysisTree/LambdaAna/: GNUmakefile
AnalysisTree/MatchTracks/: MatchTracks.h  match.fcl
AnalysisTree/MergeData/: MergeDataBeam.h  MergeDataBeam_module.cc  MergeDataMINOS.cxx  MergeDataMINOS_module.cc  MergeSimMINOS.cxx  MergeSimMINOS_module.cc  mergemc.fcl
AnalysisTree/MergeScan/: MergeScan.h  MergeScan_module.cc
AnalysisTree/MuonAna/: MuonAna.cxx  muonana.fcl  muonanamodules.fcl
AnalysisTree/RadArgonAna/: RadArgonAna.h
AnalysisTree/SimKinematics/: simkinematics_reco.fcl
AnalysisTree/T962G4Ana/: T962G4Ana.h  chargedpion.fcl  t962g4ana.fcl
AnalysisTree/T962_Objects/: GNUmakefile  MINOSTrackMatch.cxx
AnalysisTree/TGMuon/: TGMuon.cxx  TGMuon_module.cc  prodtgmuon.fcl
DriftElectrons/: DriftElectrons.cxx  DriftElectrons.h  DriftElectrons_module.cc  DriftElectrons_plugin.cc  GNUmakefile  drifte.py  driftmodules.fcl
DriftElectrons/inc/: DriftElectrons.h
LArPandoraAlgorithms/: CMakeLists.txt  GNUmakefile  LArContent.h
LArPandoraAnalysis/: PFParticleAnalysis_module.cc  PFParticleCosmicAna_module.cc  PFParticleHitDumper_module.cc  PFParticleMonitoring_module.cc  PFParticleTrackAna_module.cc
LArPandoraInterface/: CMakeLists.txt  GNUmakefile  ILArPandora.h  LArPandora.cxx  LArPandora.h  LArPandoraBase.cxx  LArPandoraBase.h  LArPandoraCollector.cxx  LArPandoraCollector.h  LArPandoraHelper.cxx  LArPandoraHelper.h  LArPandoraInput.cxx  LArPandoraInput.h  LArPandoraOutput.cxx  LArPandoraOutput.h  LArPandoraParticleCreator.cxx  LArPandoraParticleCreator.h  LArPandora_module.cc  LBNE35tGeometryHelper.cxx  LBNE35tGeometryHelper.h  LBNE35tPandora_module.cc  LBNE35tParticleStitcher_module.cc  LBNE35tPseudoLayerPlugin.h  LBNE35tTransformationPlugin.h  LBNE4APAGeometryHelper.cxx  LBNE4APAGeometryHelper.h  LBNE4APAPandora_module.cc  MicroBooNEPandora_module.cc  MicroBooNEPseudoLayerCalculator.h  MicroBooNEPseudoLayerPlugin.cxx  MicroBooNEPseudoLayerPlugin.h  MicroBooNETransformationCalculator.h  MicroBooNETransformationPlugin.h  PFParticleAnalysis_module.cc  PFParticleCosmicAna_module.cc  PFParticleHitDumper_module.cc  PFParticleMonitoring_module.cc  PFParticleSeed.cxx  PFParticleSeed.h  PFParticleStitcher.cxx  (+15 more)
LArPandoraInterface/scripts/: CMakeLists.txt  PandoraSettingsWrite.xml  PandoraSettings_LBNE35t_Cosmic.xml  PandoraSettings_MicroBooNE_Cosmic.xml  PandoraSettings_MicroBooNE_Neutrino.xml  PandoraSettings_MicroBooNE_Standard.xml  PandoraSettings_Write.xml
MagField/: GNUmakefile  MagField.cxx  MagField_service.cc  mag.h  magfield.fcl
MergeScan/: GNUmakefile  MergeScan.cxx  MergeScan.h
MicroBooNEPandora/: CMakeLists.txt  MicroBooNEPandora_module.cc  MicroBooNEPseudoLayerPlugin.h  MicroBooNETransformationPlugin.h  runpandora_microboone_cosmic.fcl
T962/: GNUmakefile
T962_MergeData/: GNUmakefile  MINOS.cxx  MINOS.h  MergeData.cxx  MergeData.h  MergeData_module.cc  MergeData_plugin.cc  MergeScan.cxx  MergeScan.h  MergeScan_module.cc  MergeScan_plugin.cc  Paddles.cxx  Paddles.h  ScanFilter.cxx  ScanFilter.h  ScanFilter_module.cc  ScanInfo.cxx  ScanInfo.h  T962_MergeData_dict_plugin.cc  T962_MergeData_map_plugin.cc  classes.h  classes_def.xml  merge.py  mergedata.py  mergedatamodules.fcl  mergescan.py
inc/: CRYHelper.h  GENIEHelper.h  evgenbase.h
larpandora/: CMakeLists.txt
larpandora/LArPandoraInterface/: CMakeLists.txt  ILArPandora.h  LArPandora.cxx  LArPandora.h  LArPandoraBase.cxx  LArPandoraBase.h  LArPandoraCollector.cxx  LArPandoraCollector.h  LArPandoraGeometry.cxx  LArPandoraGeometry.h  LArPandoraHelper.cxx  LArPandoraHelper.h  LArPandoraInput.cxx  LArPandoraInput.h  LArPandoraModule_module.cc  LArPandoraOutput.cxx  LArPandoraOutput.h  LArPandoraParticleCreator.cxx  LArPandoraParticleCreator.h  MicroBooNEPandora_module.cc  MicroBooNEPseudoLayerPlugin.cxx  MicroBooNEPseudoLayerPlugin.h  MicroBooNETransformationPlugin.cxx  MicroBooNETransformationPlugin.h  PFParticleAnalysis_module.cc  PFParticleCosmicAna_module.cc  PFParticleHitDumper_module.cc  PFParticleMonitoring_module.cc  PFParticleStitcher.cxx  PFParticleStitcher.h  PFParticleTrackAna_module.cc  StandardPandora_module.cc  pandoramodules.fcl  pandoramodules_microboone.fcl
larpandora/LArPandoraInterface/scripts/: PandoraSettings_Cosmic.xml  PandoraSettings_Cosmic_Standard.xml  PandoraSettings_Master_Standard.xml  PandoraSettings_MicroBooNE_Neutrino.xml  PandoraSettings_Neutrino.xml  PandoraSettings_Neutrino_Standard.xml  PandoraSettings_Write.xml
larpandora/MicroBooNEPandora/: CMakeLists.txt  MicroBooNEPandora_module.cc  MicroBooNEPseudoLayerPlugin.cxx  MicroBooNEPseudoLayerPlugin.h  MicroBooNETransformationPlugin.cxx  MicroBooNETransformationPlugin.h  pandoramodules.fcl  pandoramodules_microboone.fcl  runpandora_microboone_cosmic.fcl  runpandora_microboone_neutrino.fcl  runpandora_microboone_writer.fcl
larpandora/MicroBooNEPandora/scripts/: PandoraSettings_MicroBooNE_Cosmic.xml  PandoraSettings_MicroBooNE_Neutrino.xml  PandoraSettings_MicroBooNE_SingleNeutrino.xml
src/: CRYHelper.cxx  CRYHelper.os  GENIEHelper.cxx  GENIEHelper.os  SConscript
test/: CMakeLists.txt
ups/: product_deps
xml/: bnb_off_mcc9_flashID.xml  bnb_off_mcc9_rolling_flashID.xml  bnb_on_mcc9_rolling_flashID.xml  nu_mcc9_tag2_flashID.xml  nue_mcc9_tag2_flashID.xml
(+1136 files in other folders)
